# debezium-mysql-cdc

./: Dockerfile  README.md  debezium-config.json  docker-compose.yml  producer.py  pyproject.toml
