[tool.poetry]
name = "debezium-mysql-cdc"
version = "0.1.0"
description = ""
authors = ["Matheus Lima <matheus.lima@wexinc.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
mysql-connector-python = "^9.1.0"
faker = "^30.8.0"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
